--- a/Sparse RSS/README
+++ b/Sparse RSS/README
@@ -11,4 +11,6 @@ Translators
 
 The file "LICENSE" contains the license information for the program.
 
-Icons and artwork are distributed under the CC-BY 3.0 license.
+Original icons and artwork are distributed under the CC-BY 3.0 license.
+
+Penn Manor logo is Copyright 2012 Penn Manor School District, Lancaster PA, and may be used only with permission.  
